--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
                         <artifactId>checkstyle</artifactId>
                         <version>8.41.1</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>42.2.12</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
