--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.16</version>
         </dependency>
     </dependencies>
     <build>
@@ -57,11 +67,7 @@
                         <artifactId>checkstyle</artifactId>
                         <version>8.41.1</version>
                     </dependency>
-                    <dependency>
-                        <groupId>org.postgresql</groupId>
-                        <artifactId>postgresql</artifactId>
-                        <version>42.2.12</version>
-                    </dependency>
+
                 </dependencies>
             </plugin>
             <plugin>
