--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>3.6.2</version>
                 <configuration>
-                    <changeLogFile>${basedir}/db/script/master.xml</changeLogFile>
+                    <changeLogFile>${basedir}/db/master.xml</changeLogFile>
                     <url>${db.url}</url>
                     <driver>${db.driver}</driver>
                     <username>${db.username}</username>
