--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.16</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.5.13</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
